--- a/selfportrait.html
+++ b/selfportrait.html
@@ -142,7 +142,7 @@
         <h3><strong>The Result:</strong></h3>
         <div class="image_row">
           <div class="col_img">
-            <figure><img src="projects/images/selfpotrait.png" class="img-responsive"></figure>
+            <figure><img src="projects/images/selfpotrait.jpg" class="img-responsive"></figure>
           </div> 
         </div>
         
