--- a/portfolio.html
+++ b/portfolio.html
@@ -197,7 +197,7 @@
             </figure>
           </li>
           <li class="wow fdeInUp">
-            <figure> <img src="img/self.png" alt="Screenshot 01">
+            <figure> <img src="img/self.jpg" alt="Screenshot 01">
               <figcaption>
                 <div class="caption-content">
                   <h6>Self Portrait</h6>
