--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </figure>
           </li>
           <li class="wow fdeInUp">
-            <figure> <img src="img/self.jpg" alt="Screenshot 01">
+            <figure> <img src="img/comicme.jpg" alt="Screenshot 01">
               <figcaption>
                 <div class="caption-content">
                   <h6>Self Portrait</h6>
