--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <!--section-title-->
       <div class="section-title text-center wow fadeInUp">
         <h2>About me</h2>
-        <p>Hi! I am a first generation college student from Lahore, Pakistan. Currently, based in Abu Dhabi, a sophomore at New York University Abu Dhabi, UAE. I am a Computer Science major and as if it was not enough, also completing a minor in Interactive Media and Applied Mathematics. If only I am able to spare some time from my coursework and work commitments, I love to endlessly scroll my Pinterest feed and watch random Youtube videos to sleep. Recently, I have found myself loving workouts and would love to talk all day long about healthy meals and exercise routines. If you ever see me around, do not forget to say hi as I enjoy meeting new people and welcoming new perpectives in my life. Continue to explore my projects to know more about me!</p>
+        <p>Hi! I am a first generation college student from Lahore, Pakistan. Currently, based in Abu Dhabi, a sophomore at New York University Abu Dhabi, UAE. I am a Computer Science major and as if it was not enough, also completing a minor in Interactive Media and Applied Mathematics. If only I am able to spare some time from my coursework and work commitments, I love to endlessly scroll my Pinterest feed and watch random Youtube videos to sleep. Recently, I have found myself loving workouts and would love to talk all day long about healthy meals and exercise routines. If you ever see me around, do not forget to say hi as I enjoy meeting new people and welcoming new perspectives in my life. Continue to explore my projects to know more about me!</p>
       </div>
       <!--/section-title-->
       
