--- a/portfolio.html
+++ b/portfolio.html
@@ -85,6 +85,20 @@
         <!--portfolio grid-->
         <ul class="grid">
           <li class="wow fdeInUp">
+            <figure> <img src="img/stress.png" alt="Screenshot 01">
+              <figcaption>
+                <div class="caption-content  wow fdeInUp">
+                  <h6>STRESS FREE NYUAD?</h6>
+                  <hr>
+                  <a>Java</a>/ <a>Interactive Art</a>/ <a>Processing</a>
+                  <ul class="work-more">
+                    <li><a href="stress.html" target="_blank"><i class="fa fa-link"></i></a></li>
+                  </ul>
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="wow fdeInUp">
             <figure> <img src="img/tornado.png" alt="Screenshot 01">
               <figcaption>
                 <div class="caption-content  wow fdeInUp">
