--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
       <div class="clearfix"></div>
       <div class="works">
         <ul class="grid">
-          <li class="wow fdeInUp">
-            <figure> <img src="img/race.png" alt="Screenshot 01">
+           <li class="wow fdeInUp">
+            <figure> <img src="img/bobbing.png" alt="Screenshot 01">
               <figcaption>
-                <div class="caption-content">
-                  <h6>The Presidential Race</h6>
+                <div class="caption-content  wow fdeInUp">
+                  <h6>BOBBING MELODY</h6>
                   <hr>
-                  <a>Python</a>/ <a>Adobe Illustrator</a>/ <a>Processing</a>/ <a>Design</a>
+                  <a>Java OOP</a>/ <a>Interactive Art</a>/ <a>Processing</a>/ <a>Arduino</a>
                   <ul class="work-more">
-                    <li><a href="Presidential Race.html"><i class="fa fa-link"></i></a></li>
+                    <li><a href="Bobbing-Melody.html" target="_blank"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </figcaption>
@@ -180,14 +180,14 @@
             </figure>
           </li>
           <li class="wow fdeInUp">
-            <figure> <img src="img/comicme.jpg" alt="Screenshot 01">
+            <figure> <img src="img/stress.png" alt="Screenshot 01">
               <figcaption>
-                <div class="caption-content">
-                  <h6>Self Portrait</h6>
+                <div class="caption-content  wow fdeInUp">
+                  <h6>STRESS FREE NYUAD?</h6>
                   <hr>
-                  <a>Java</a>/ <a>Art</a>/ <a>Processing</a>
+                  <a>Java</a>/ <a>Interactive Art</a>/ <a>Processing</a>
                   <ul class="work-more">
-                    <li><a href="selfportrait.html"><i class="fa fa-link"></i></a></li>
+                    <li><a href="stress.html" target="_blank"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </figcaption>
