--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="container">
     <div class="row wow fadeInUp">
       <p>Want to learn more about me?</p>
-      <a href="CV_Fall2021.pdf" target="_blank">Resume</a> </div>
+      <a href="CV-fn2039.pdf" target="_blank">Resume</a> </div>
   </div>
 </section>
 
