--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,7 @@
       <div class="col-md-offset-3 col-md-6 page-block">
         <h1>Any questions?</h1>
         <h2>Reach Out At</h2>
-        <h4>fn2039@nyu.edu</h4>
-        <h4>+971 56 333 1955</h4>
+        <h4>fatima.nadeem@nyu.edu</h4>
       <!--blog posts container-->
    
     </div>
