--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
             </figure>
           </li>
           <li class="wow fdeInUp">
-            <figure> <img src="img/stress.png" alt="Screenshot 01">
-              <figcaption>
-                <div class="caption-content  wow fdeInUp">
-                  <h6>STRESS FREE NYUAD?</h6>
-                  <hr>
-                  <a>Java</a>/ <a>Interactive Art</a>/ <a>Processing</a>
-                  <ul class="work-more">
-                    <li><a href="stress.html" target="_blank"><i class="fa fa-link"></i></a></li>
-                  </ul>
-                </div>
-              </figcaption>
-            </figure>
-          </li>
+          <figure> <img src="img/trial.png" alt="Screenshot 01">
+            <figcaption>
+              <div class="caption-content  wow fdeInUp">
+                <h6>The Trial for Murder</h6>
+                <hr>
+                <a>GPT-2</a>/ <a>AI Text Generation</a>/ <a>Design</a>/ <a>Web Development</a>
+                <ul class="work-more">
+                  <li><a href="trial.html" target="_blank"><i class="fa fa-link"></i></a></li>
+                </ul>
+              </div>
+            </figcaption>
+          </figure>
+        </li>
         </ul>
       </div>
     </div>
